# tbox-finder

./: .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
analyses/: gate_default_rationales.qmd  phase0_log.qmd  phase1_log.qmd  phase2_log.qmd
conf/data/: coverage.yaml  decoys.yaml  splits.yaml  stage1.yaml
conf/model/: caduceus_stage1.yaml  nt_multispecies.yaml  rinalmo_stage2.yaml
conf/optim/: adamw_cpt.yaml  adamw_smoke.yaml  stage1.yaml  stage1_best.yaml
conf/tracking/: wandb.yaml
conf/train/: gtdb_cpt.yaml  lora_stage2.yaml  stage1.yaml  stage1_best.yaml  stage1_smoke.yaml
data/interim/: .gitignore  lineage_replaced.parquet.dvc  lineage_replaced.provenance.json  master_tboxes_ingested.parquet.dvc  master_tboxes_ingested.provenance.json  pilot_genomes.dvc  pilot_genomes.provenance.json
data/processed/: .gitignore  master_clean_v0.parquet.dvc
docker/: Dockerfile
docs/: license_audit.md
docs/decisions/: ADR-0001-architecture-and-aims.md  ADR-0002-environment-and-ml-stack.md  (+4 more)
envs/: app.conda-lock.yml  app.yml  data.conda-lock.yml  data.yml  homology.conda-lock.yml  homology.yml  infernal.conda-lock.yml  infernal.yml  ml-dna.conda-lock.yml  ml-dna.yml  ml-rna.conda-lock.yml  ml-rna.yml  ml.yml  rscape.conda-lock.yml  rscape.yml  viz.conda-lock.yml  viz.yml
paper/: manuscript.qmd
scripts/: check_sm86_wheels.py  make_rscape_fixture.py  make_substrate_prescan_control.py  measure_junction_control.py  measure_overlap_prevalence.py  reconstruct_encumbered.py  rinalmo_ft_inference.py  rinalmo_weight_diff.py
workflow/: Snakefile
(+356 files in other folders)
